// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`tagList > renders correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #3f4250;
  gap: 0.5rem;
}

.emotion-2:has(.ellipsed) {
  width: calc(100% - 50px);
  max-width: -webkit-fit-content;
  max-width: -moz-fit-content;
  max-width: fit-content;
}

.emotion-2 span,
.emotion-2 div {
  width: 100%;
  max-width: -webkit-fit-content;
  max-width: -moz-fit-content;
  max-width: fit-content;
}

.emotion-4 {
  cursor: pointer;
  color: #641cb3;
  border: none;
  font-size: 0.875rem;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  max-width: 21.875rem;
  overflow: hidden;
  white-space: pre;
  text-overflow: ellipsis;
  background-color: transparent;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
      style="visibility: visible;"
    >
      <div
        class="emotion-2 emotion-3"
      >
        <div
          class="ellipsed styles__d6zknp0 styles_sentiment_neutral__d6zknp4"
        >
          <div
            class="styles__d6zknpa style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_true__m4c9ow7 style_prominence_default__m4c9owi style_variant_caption__m4c9ows style_disabled_false__m4c9ow1b style_undefined_compound_72__m4c9ow3c"
          >
            scaleway
          </div>
        </div>
      </div>
      <div
        aria-controls="«r2»"
        aria-describedby="«r2»"
        class="styles__w40vpo9"
        tabindex="-1"
      >
        <span
          class="emotion-4 emotion-5"
          data-testid="taglist-open"
        >
          +1
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`tagList > renders correctly a scrollable popover with non default popoverMaxHeight 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #3f4250;
  gap: 0.5rem;
}

.emotion-2:has(.ellipsed) {
  width: calc(100% - 100px);
  max-width: -webkit-fit-content;
  max-width: -moz-fit-content;
  max-width: fit-content;
}

.emotion-2 span,
.emotion-2 div {
  width: 100%;
  max-width: -webkit-fit-content;
  max-width: -moz-fit-content;
  max-width: fit-content;
}

.emotion-4 {
  cursor: pointer;
  color: #641cb3;
  border: none;
  font-size: 0.875rem;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  max-width: 21.875rem;
  overflow: hidden;
  white-space: pre;
  text-overflow: ellipsis;
  background-color: transparent;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
      style="visibility: visible;"
    >
      <div
        class="emotion-2 emotion-3"
      >
        <div
          class="styles__d6zknp0 styles_sentiment_neutral__d6zknp4"
        >
          <div
            class="styles__d6zknpa style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_true__m4c9ow7 style_prominence_default__m4c9owi style_variant_caption__m4c9ows style_disabled_false__m4c9ow1b style_undefined_compound_72__m4c9ow3c"
          >
            very
          </div>
        </div>
        <div
          class="styles__d6zknp0 styles_sentiment_neutral__d6zknp4"
        >
          <div
            class="styles__d6zknpa style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_true__m4c9ow7 style_prominence_default__m4c9owi style_variant_caption__m4c9ows style_disabled_false__m4c9ow1b style_undefined_compound_72__m4c9ow3c"
          >
            item
          </div>
        </div>
        <div
          class="styles__d6zknp0 styles_sentiment_neutral__d6zknp4"
        >
          <div
            class="styles__d6zknpa style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_true__m4c9ow7 style_prominence_default__m4c9owi style_variant_caption__m4c9ows style_disabled_false__m4c9ow1b style_undefined_compound_72__m4c9ow3c"
          >
            item
          </div>
        </div>
        <div
          class="ellipsed styles__d6zknp0 styles_sentiment_neutral__d6zknp4"
        >
          <div
            class="styles__d6zknpa style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_true__m4c9ow7 style_prominence_default__m4c9owi style_variant_caption__m4c9ows style_disabled_false__m4c9ow1b style_undefined_compound_72__m4c9ow3c"
          >
            item
          </div>
        </div>
      </div>
      <div
        aria-controls="«r1v»"
        aria-describedby="«r1v»"
        class="styles__w40vpo9"
        tabindex="-1"
      >
        <span
          class="emotion-4 emotion-5"
          data-testid="taglist-open"
        >
          +51
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`tagList > renders correctly and add ellipsis to the first tag as it too long 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #3f4250;
  gap: 0.5rem;
}

.emotion-2:has(.ellipsed) {
  width: calc(100% - 0px);
  max-width: -webkit-fit-content;
  max-width: -moz-fit-content;
  max-width: fit-content;
}

.emotion-2 span,
.emotion-2 div {
  width: 100%;
  max-width: -webkit-fit-content;
  max-width: -moz-fit-content;
  max-width: fit-content;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
      style="visibility: visible;"
    >
      <div
        class="emotion-2 emotion-3"
      >
        <div
          class="ellipsed styles__d6zknp0 styles_sentiment_neutral__d6zknp4"
        >
          <div
            class="styles__d6zknpa style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_true__m4c9ow7 style_prominence_default__m4c9owi style_variant_caption__m4c9ows style_disabled_false__m4c9ow1b style_undefined_compound_72__m4c9ow3c"
          >
            scaleway is the best cloud provider ever invented
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`tagList > renders correctly and ignore custom threshold as it does not fit the parent 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #3f4250;
  gap: 0.5rem;
}

.emotion-2:has(.ellipsed) {
  width: calc(100% - 50px);
  max-width: -webkit-fit-content;
  max-width: -moz-fit-content;
  max-width: fit-content;
}

.emotion-2 span,
.emotion-2 div {
  width: 100%;
  max-width: -webkit-fit-content;
  max-width: -moz-fit-content;
  max-width: fit-content;
}

.emotion-4 {
  cursor: pointer;
  color: #641cb3;
  border: none;
  font-size: 0.875rem;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  max-width: 21.875rem;
  overflow: hidden;
  white-space: pre;
  text-overflow: ellipsis;
  background-color: transparent;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
      style="visibility: visible;"
    >
      <div
        class="emotion-2 emotion-3"
      >
        <div
          class="ellipsed styles__d6zknp0 styles_sentiment_neutral__d6zknp4"
        >
          <div
            class="styles__d6zknpa style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_true__m4c9ow7 style_prominence_default__m4c9owi style_variant_caption__m4c9ows style_disabled_false__m4c9ow1b style_undefined_compound_72__m4c9ow3c"
          >
            scaleway
          </div>
        </div>
      </div>
      <div
        aria-controls="«ri»"
        aria-describedby="«ri»"
        class="styles__w40vpo9"
        tabindex="-1"
      >
        <span
          class="emotion-4 emotion-5"
          data-testid="taglist-open"
        >
          +2
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`tagList > renders correctly with copiable 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #3f4250;
  gap: 0.5rem;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
      style="visibility: visible;"
    >
      <div
        class="emotion-2 emotion-3"
      >
        <div
          aria-controls="«r11»"
          aria-describedby="«r11»"
          class="styles__w40vpo9"
          tabindex="0"
        >
          <button
            class="styles__d6zknp0 styles_copiable_true__d6zknp1 styles_sentiment_neutral__d6zknp4"
          >
            <div
              class="styles__d6zknpa style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_true__m4c9ow7 style_prominence_default__m4c9owi style_variant_caption__m4c9ows style_disabled_false__m4c9ow1b style_undefined_compound_72__m4c9ow3c"
            >
              scaleway
            </div>
          </button>
        </div>
        <div
          aria-controls="«r13»"
          aria-describedby="«r13»"
          class="styles__w40vpo9"
          tabindex="0"
        >
          <button
            class="ellipsed styles__d6zknp0 styles_copiable_true__d6zknp1 styles_sentiment_neutral__d6zknp4"
          >
            <div
              class="styles__d6zknpa style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_true__m4c9ow7 style_prominence_default__m4c9owi style_variant_caption__m4c9ows style_disabled_false__m4c9ow1b style_undefined_compound_72__m4c9ow3c"
            >
              cloud
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`tagList > renders correctly with custom threshold 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #3f4250;
  gap: 0.5rem;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
      style="visibility: visible;"
    >
      <div
        class="emotion-2 emotion-3"
      >
        <div
          class="styles__d6zknp0 styles_sentiment_neutral__d6zknp4"
        >
          <div
            class="styles__d6zknpa style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_true__m4c9ow7 style_prominence_default__m4c9owi style_variant_caption__m4c9ows style_disabled_false__m4c9ow1b style_undefined_compound_72__m4c9ow3c"
          >
            scaleway
          </div>
        </div>
        <div
          class="ellipsed styles__d6zknp0 styles_sentiment_neutral__d6zknp4"
        >
          <div
            class="styles__d6zknpa style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_true__m4c9ow7 style_prominence_default__m4c9owi style_variant_caption__m4c9ows style_disabled_false__m4c9ow1b style_undefined_compound_72__m4c9ow3c"
          >
            cloud
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`tagList > renders correctly with custom threshold and extra tags 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #3f4250;
  gap: 0.5rem;
}

.emotion-2:has(.ellipsed) {
  width: calc(100% - 50px);
  max-width: -webkit-fit-content;
  max-width: -moz-fit-content;
  max-width: fit-content;
}

.emotion-2 span,
.emotion-2 div {
  width: 100%;
  max-width: -webkit-fit-content;
  max-width: -moz-fit-content;
  max-width: fit-content;
}

.emotion-4 {
  cursor: pointer;
  color: #641cb3;
  border: none;
  font-size: 0.875rem;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  max-width: 21.875rem;
  overflow: hidden;
  white-space: pre;
  text-overflow: ellipsis;
  background-color: transparent;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
      style="visibility: visible;"
    >
      <div
        class="emotion-2 emotion-3"
      >
        <div
          class="styles__d6zknp0 styles_sentiment_neutral__d6zknp4"
        >
          <div
            class="styles__d6zknpa style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_true__m4c9ow7 style_prominence_default__m4c9owi style_variant_caption__m4c9ows style_disabled_false__m4c9ow1b style_undefined_compound_72__m4c9ow3c"
          >
            scaleway
          </div>
        </div>
        <div
          class="ellipsed styles__d6zknp0 styles_sentiment_neutral__d6zknp4"
        >
          <div
            class="styles__d6zknpa style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_true__m4c9ow7 style_prominence_default__m4c9owi style_variant_caption__m4c9ows style_disabled_false__m4c9ow1b style_undefined_compound_72__m4c9ow3c"
          >
            cloud
          </div>
        </div>
      </div>
      <div
        aria-controls="«re»"
        aria-describedby="«re»"
        class="styles__w40vpo9"
        tabindex="-1"
      >
        <span
          class="emotion-4 emotion-5"
          data-testid="taglist-open"
        >
          +1
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`tagList > renders correctly with custom threshold and extra tags and maxLength inferior to the combined size of tags 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #3f4250;
  gap: 0.5rem;
}

.emotion-2:has(.ellipsed) {
  width: calc(100% - 100px);
  max-width: -webkit-fit-content;
  max-width: -moz-fit-content;
  max-width: fit-content;
}

.emotion-2 span,
.emotion-2 div {
  width: 100%;
  max-width: -webkit-fit-content;
  max-width: -moz-fit-content;
  max-width: fit-content;
}

.emotion-4 {
  cursor: pointer;
  color: #641cb3;
  border: none;
  font-size: 0.875rem;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  max-width: 21.875rem;
  overflow: hidden;
  white-space: pre;
  text-overflow: ellipsis;
  background-color: transparent;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
      style="visibility: visible;"
    >
      <div
        class="emotion-2 emotion-3"
      >
        <div
          class="ellipsed styles__d6zknp0 styles_sentiment_neutral__d6zknp4"
        >
          <div
            class="styles__d6zknpa style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_true__m4c9ow7 style_prominence_default__m4c9owi style_variant_caption__m4c9ows style_disabled_false__m4c9ow1b style_undefined_compound_72__m4c9ow3c"
          >
            scaleway
          </div>
        </div>
      </div>
      <div
        aria-controls="«rn»"
        aria-describedby="«rn»"
        class="styles__w40vpo9"
        tabindex="-1"
      >
        <span
          class="emotion-4 emotion-5"
          data-testid="taglist-open"
        >
          +2
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`tagList > renders correctly with icons 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #3f4250;
  gap: 0.5rem;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
      style="visibility: visible;"
    >
      <div
        class="emotion-2 emotion-3"
      >
        <div
          aria-controls="«r19»"
          aria-describedby="«r19»"
          class="styles__w40vpo9"
          tabindex="0"
        >
          <button
            class="styles__d6zknp0 styles_copiable_true__d6zknp1 styles_sentiment_neutral__d6zknp4"
          >
            <div
              class="styles__d6zknpa style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_true__m4c9ow7 style_prominence_default__m4c9owi style_variant_caption__m4c9ows style_disabled_false__m4c9ow1b style_undefined_compound_72__m4c9ow3c"
            >
              scaleway
            </div>
          </button>
        </div>
        <div
          aria-controls="«r1b»"
          aria-describedby="«r1b»"
          class="styles__w40vpo9"
          tabindex="0"
        >
          <button
            class="ellipsed styles__d6zknp0 styles_copiable_true__d6zknp1 styles_sentiment_neutral__d6zknp4"
          >
            <div
              class="styles__d6zknpa style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_true__m4c9ow7 style_prominence_default__m4c9owi style_variant_caption__m4c9ows style_disabled_false__m4c9ow1b style_undefined_compound_72__m4c9ow3c"
            >
              cloud
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`tagList > renders correctly with multiline 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #3f4250;
  gap: 0.5rem;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-4 {
  cursor: pointer;
  color: #641cb3;
  border: none;
  font-size: 0.875rem;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  max-width: 21.875rem;
  overflow: hidden;
  white-space: pre;
  text-overflow: ellipsis;
  background-color: transparent;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
      style="visibility: visible;"
    >
      <div
        class="emotion-2 emotion-3"
      >
        <div
          class="styles__d6zknp0 styles_sentiment_neutral__d6zknp4"
        >
          <div
            class="styles__d6zknpa style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_true__m4c9ow7 style_prominence_default__m4c9owi style_variant_caption__m4c9ows style_disabled_false__m4c9ow1b style_undefined_compound_72__m4c9ow3c"
          >
            scaleway
          </div>
        </div>
        <div
          class="ellipsed styles__d6zknp0 styles_sentiment_neutral__d6zknp4"
        >
          <div
            class="styles__d6zknpa style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_true__m4c9ow7 style_prominence_default__m4c9owi style_variant_caption__m4c9ows style_disabled_false__m4c9ow1b style_undefined_compound_72__m4c9ow3c"
          >
            cloud
          </div>
        </div>
      </div>
      <div
        aria-controls="«rs»"
        aria-describedby="«rs»"
        class="styles__w40vpo9"
        tabindex="-1"
      >
        <span
          class="emotion-4 emotion-5"
          data-testid="taglist-open"
        >
          +1
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`tagList > renders correctly with no tags 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  />
</DocumentFragment>
`;

exports[`tagList > renders correctly with placement 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #3f4250;
  gap: 0.5rem;
}

.emotion-2:has(.ellipsed) {
  width: calc(100% - 50px);
  max-width: -webkit-fit-content;
  max-width: -moz-fit-content;
  max-width: fit-content;
}

.emotion-2 span,
.emotion-2 div {
  width: 100%;
  max-width: -webkit-fit-content;
  max-width: -moz-fit-content;
  max-width: fit-content;
}

.emotion-4 {
  cursor: pointer;
  color: #641cb3;
  border: none;
  font-size: 0.875rem;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  max-width: 21.875rem;
  overflow: hidden;
  white-space: pre;
  text-overflow: ellipsis;
  background-color: transparent;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
      style="visibility: visible;"
    >
      <div
        class="emotion-2 emotion-3"
      >
        <div
          class="ellipsed styles__d6zknp0 styles_sentiment_neutral__d6zknp4"
        >
          <div
            class="styles__d6zknpa style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_true__m4c9ow7 style_prominence_default__m4c9owi style_variant_caption__m4c9ows style_disabled_false__m4c9ow1b style_undefined_compound_72__m4c9ow3c"
          >
            scaleway
          </div>
        </div>
      </div>
      <div
        aria-controls="«r5»"
        aria-describedby="«r5»"
        class="styles__w40vpo9"
        tabindex="-1"
      >
        <span
          class="emotion-4 emotion-5"
          data-testid="taglist-open"
        >
          +1
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
